--- a/2.html
+++ b/2.html
@@ -5,17 +5,28 @@
   <head>
     <title>K I J I - 보라곰팡이</title>
     <meta charset="utf-8">
+    <style>
+      a {
+        color: skyblue;
+        text-decoration: none;
+      }
+      h3 {
+        color: skyblue;
+      }
+    </style>
   </head>
   <body>
     <H1><a href="index.html">K I J I</a></h1>
     <ul>
       <br><li><a href="1.html">단기임대</a></li>
-      <li><a href="2.html">보라곰팡이</a></li>
+      <li><a href="2.html" style="color:red;">보라곰팡이</a></li>
       <li><a href="3.html">비장소</a></li>
     </ul>
-    <h2>보라곰팡이</h2>
-    비장소에서 움직이는 사람들은 사라지고, 혹은 떠돌아다니는 부유물 정도로 남는다.
-    <br>그렇기에 그 공간에는 각각의 개인만이 남아 시각적, 청각적과 같은 기호들로만 상호작용이 이루어진다.
-    <br><br><br><p><img src="보라곰팡이.png" width="100%"></p>
+
+
+    <h2 style="color:red;">보라곰팡이</h2>
+    <h3>비장소에서 움직이는 사람들은 사라지고, 혹은 떠돌아다니는 부유물 정도로 남는다.
+    <br>그렇기에 그 공간에는 각각의 개인만이 남아 시각적, 청각적과 같은 기호들로만 상호작용이 이루어진다.</h3>
+    <br><br><br><p><img src="보라곰팡이.png" width="700px"></p>
   </body>
 </html>
