--- a/index.html
+++ b/index.html
@@ -5,23 +5,36 @@
   <head>
     <title>K I J I - HOME</title>
     <meta charset="utf-8">
+    <style>
+      a {
+        color: skyblue;
+        text-decoration:none;
+      }
+      h1 {
+        font-size-adjust: 70px;
+      }
+    </style>
   </head>
   <body>
     <H1><a href="index.html">K I J I</a></h1>
-
-      <video width="100%" controls>
-      <source src="AAA.mp4" type="video/mp4">
-      </video>
 
 
 
       <br><input type="checkbox">
     <ul>
-      <br><li><a href="1.html">단기임대</a></li>
-      <li><a href="2.html">보라곰팡이</a></li>
-      <li><a href="3.html">비장소</a></li>
+      <br><li><a href="1.html"><strong>단기임대</strong></a></li>
+      <li><a href="2.html"><strong>보라곰팡이</strong></a></li>
+      <li><a href="3.html"><strong>비장소</strong></a></li>
     </ul>
-      <p><img src="HOME.png" width="100%"></p>
+
+<!--
+    <ul>
+      <br><li><a href="1.html"><font color="orange"><strong>단기임대</strong></font></a></li>
+      <li><a href="2.html"><font color="orange"><strong>보라곰팡이</strong></font></a></li>
+      <li><a href="3.html"><font color="orange"><strong>비장소</strong></font></a></li>
+    </ul>
+-->
+      <p><img src="HOME.png" width="700px"></p>
 <p><div id="disqus_thread"></div>
 <script>
 
