--- a/3.html
+++ b/3.html
@@ -6,30 +6,72 @@
     <title>K I J I - 비장소</title>
     <meta charset="utf-8">
     <style>
-     a {
-       color: skyblue;
-       text-decoration:none;
-     }
-     h3 {
-       color: skyblue;
-     }
+      h3 {
+        color: skyblue;
+      }
+      a {
+        color: skyblue;
+        text-decoration: none;
+      }
+      h1 {
+        font-size: 70px;
+        text-align:center;
+        border-bottom: 4px solid lightgrey;
+        padding: 30px;
+        margin: 0px;
+      }
+      #grid ul {
+        border-right: 4px solid lightgrey;
+        width: 100px;
+        padding-left: 30px
+        margin: 0px;
+      }
+      #grid {
+        display: grid;
+        grid-template-columns: 200px 1fr;
+      }
+      #article {
+        padding-top: 12px;
+        padding-right: 40px;
+      }
+      .mainimg{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 700px;
+      }
+      @media(max-width: 960px){
+        #grid {
+          display: block;
+        }
+        #grid ul {
+          border-right: none
+        }
+        .mainimg{
+          width: 400px;
+        }
+      }
     </style>
   </head>
   <body>
     <H1><a href="index.html">K I J I</a></h1>
-    <ul>
-      <br><li><a href="1.html">단기임대</a></li>
-      <li><a href="2.html">보라곰팡이</a></li>
-      <li><a href="3.html" style="color:red;">비장소</a></li>
-    </ul>
-    <h2 style="color:red;">비장소</h2>
-    <h3>현대 사회의 특징을 기술하기 위해, <a href="https://terms.naver.com/entry.nhn?docId=1526255&cid=42171&categoryId=42191"
-    target="_blank" title="Marc Auge NON PLACE">마크 오제(Marc Augé, 1995)</a>가 인류학의 전통적인 연구 대상,
-    즉 "인류학적 장소(anthropological places)"와 대비되는 장소성을 특징짓기 위해 고안한 개념인
-    "비장소(non-places)"는 현대 미디어 문화, 특히 모바일 문화의 공간성을 이해하는 핵심 개념으로
-    간주될 수 있다. 비장소는 '미디어 침투 공간'으로서 미디어 표상, 대인관계, 미디어 이용 행태 등의
-    측면에서 기존 관점에서 간과한 특성을 이해할 수 있게 해 준다.</h3>
+    <div id="grid">
+        <ul>
+          <br><li><a href="1.html">단기임대</a></li>
+          <li><a href="2.html">보라곰팡이</a></li>
+          <li><a href="3.html" style="color:red;">비장소</a></li>
+        </ul>
+     <div id="article">
+        <h2 style="color:red;">비장소</h2>
+        <h3>현대 사회의 특징을 기술하기 위해, <a href="https://terms.naver.com/entry.nhn?docId=1526255&cid=42171&categoryId=42191"
+        target="_blank" title="Marc Auge NON PLACE">마크 오제(Marc Augé, 1995)</a>가 인류학의 전통적인 연구 대상,
+        즉 "인류학적 장소(anthropological places)"와 대비되는 장소성을 특징짓기 위해 고안한 개념인
+        "비장소(non-places)"는 현대 미디어 문화, 특히 모바일 문화의 공간성을 이해하는 핵심 개념으로
+        간주될 수 있다. 비장소는 '미디어 침투 공간'으로서 미디어 표상, 대인관계, 미디어 이용 행태 등의
+        측면에서 기존 관점에서 간과한 특성을 이해할 수 있게 해 준다.</h3>
 
-    <br><br><br><p><img src="비장소.png" width="700px"></p>
+        <br><br><br><p><img src="비장소.png" class="mainimg"></p>
+     </div>
+    </div>
   </body>
 </html>
