--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
         text-decoration:none;
       }
       h1 {
-        font-size-adjust: 70px;
+        font-size: 70px;
+        text-align:center;
+      }
+      .mainimg{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 1000px;
       }
     </style>
   </head>
@@ -34,7 +41,7 @@
       <li><a href="3.html"><font color="orange"><strong>비장소</strong></font></a></li>
     </ul>
 -->
-      <p><img src="HOME.png" width="700px"></p>
+      <p><img src="HOME.png" class="mainimg"></p>
 <p><div id="disqus_thread"></div>
 <script>
 
