--- a/3.html
+++ b/3.html
@@ -16,15 +16,16 @@
       h1 {
         font-size: 70px;
         text-align:center;
-        border-bottom: 4px solid lightgrey;
+        border-bottom: 4px solid darkgrey;
         padding: 30px;
         margin: 0px;
       }
       #grid ul {
-        border-right: 4px solid lightgrey;
+        font-weight: bold;
+        border-right: 4px solid darkgrey;
         width: 100px;
+        margin-top: 0px;
         padding-left: 30px
-        margin: 0px;
       }
       #grid {
         display: grid;
@@ -33,6 +34,7 @@
       #article {
         padding-top: 12px;
         padding-right: 40px;
+        padding-left: 40px;
       }
       .mainimg{
         display: block;
@@ -59,10 +61,10 @@
         <ul>
           <br><li><a href="1.html">단기임대</a></li>
           <li><a href="2.html">보라곰팡이</a></li>
-          <li><a href="3.html" style="color:red;">비장소</a></li>
+          <li><a href="3.html" style="color:black;">비장소</a></li>
         </ul>
      <div id="article">
-        <h2 style="color:red;">비장소</h2>
+        <h2 style="color:black;">비장소</h2>
         <h3>현대 사회의 특징을 기술하기 위해, <a href="https://terms.naver.com/entry.nhn?docId=1526255&cid=42171&categoryId=42191"
         target="_blank" title="Marc Auge NON PLACE">마크 오제(Marc Augé, 1995)</a>가 인류학의 전통적인 연구 대상,
         즉 "인류학적 장소(anthropological places)"와 대비되는 장소성을 특징짓기 위해 고안한 개념인
