--- a/1.html
+++ b/1.html
@@ -13,21 +13,65 @@
         color: skyblue;
         text-decoration: none;
       }
+      h1 {
+        font-size: 70px;
+        text-align:center;
+        border-bottom: 4px solid darkgrey;
+        padding: 30px;
+        margin: 0px;
+      }
+      #grid ul {
+        font-weight: bold;
+        border-right: 4px solid darkgrey;
+        width: 100px;
+        margin-top: 0px;
+        padding-left: 30px
+      }
+      #grid {
+        display: grid;
+        grid-template-columns: 200px 1fr;
+      }
+      #article {
+        padding-top: 12px;
+        padding-right: 40px;
+        padding-left: 40px;
+      }
+      .mainimg{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 700px;
+      }
+      @media(max-width: 960px){
+        #grid {
+          display: block;
+        }
+        #grid ul {
+          border-right: none
+        }
+        .mainimg{
+          width: 400px;
+        }
+      }
     </style>
   </head>
   <body>
     <H1><a href="index.html">K I J I</a></h1>
-    <ul>
-      <br><li><a href="1.html" style="color:red;">단기임대</a></li>
-      <li><a href="2.html">보라곰팡이</a></li>
-      <li><a href="3.html">비장소</a></li>
-    </ul>
-    <h2 style="color:red;">단기임대</h2>
-    <h3>이런 사회에서 <strong>'집을 <u>가진다</u>'</strong>라는 것이 어떤 의미이며, 여전히 집은 우리에게 어떤 역할을 담당하고 있는지에 대한 것을 알아보기 위한 작업이다.
-    현재 집은 소유함과 소유하지 못함, 두 상태만으로 작동된다. 그 밖에 공공장소에서 협소하지만 공간은 사유화가 진행되는데, 이는 일시적이며 지속적이지 않다. 이 과정은 한 공간의 사유화가 끝나고 난 뒤 다시 시작되어 반복된다.
-    <p>우리는 공간과 공간의 사이를 부유하고 떠돌아다니는 과정을 반복한다.</p>
-    <p>결국 3단계의 작업들을 통해 <a href="https://www.youtube.com/watch?v=7Pim0nTemEg" target="_blank" title="SHORT LEASE">
-      ‘현실-가상현실-현실-가상현실…’</a>이라는 두 공간을 오고 가는 공간의 이동을 경험할 수 있을 것</p></h3>
-    <img src="KIJIYE (2).jpg" width="700px">
+    <div id="grid">
+      <ul>
+        <br><li><a href="1.html" style="color:black;">단기임대</a></li>
+        <li><a href="2.html">보라곰팡이</a></li>
+        <li><a href="3.html">비장소</a></li>
+      </ul>
+      <div id="article">
+        <h2 style="color:black;">단기임대</h2>
+        <h3>이런 사회에서 <strong>'집을 <u>가진다</u>'</strong>라는 것이 어떤 의미이며, 여전히 집은 우리에게 어떤 역할을 담당하고 있는지에 대한 것을 알아보기 위한 작업이다.
+        현재 집은 소유함과 소유하지 못함, 두 상태만으로 작동된다. 그 밖에 공공장소에서 협소하지만 공간은 사유화가 진행되는데, 이는 일시적이며 지속적이지 않다. 이 과정은 한 공간의 사유화가 끝나고 난 뒤 다시 시작되어 반복된다.
+        <p>우리는 공간과 공간의 사이를 부유하고 떠돌아다니는 과정을 반복한다.</p>
+        <p>결국 3단계의 작업들을 통해 <a href="https://www.youtube.com/watch?v=7Pim0nTemEg" target="_blank" title="SHORT LEASE">
+          ‘현실-가상현실-현실-가상현실…’</a>이라는 두 공간을 오고 가는 공간의 이동을 경험할 수 있을 것</p></h3>
+        <img src="KIJIYE (2).jpg" class="mainimg">
+      </div>
+    </div>
   </body>
 </html>
