--- a/2.html
+++ b/2.html
@@ -16,15 +16,16 @@
       h1 {
         font-size: 70px;
         text-align:center;
-        border-bottom: 4px solid lightgrey;
+        border-bottom: 4px solid darkgrey;
         padding: 30px;
         margin: 0px;
       }
       #grid ul {
-        border-right: 4px solid lightgrey;
+        font-weight: bold;
+        border-right: 4px solid darkgrey;
         width: 100px;
+        margin-top: 0px;
         padding-left: 30px
-        margin: 0px;
       }
       #grid {
         display: grid;
@@ -33,6 +34,7 @@
       #article {
         padding-top: 12px;
         padding-right: 40px;
+        padding-left: 40px;
       }
       .mainimg{
         display: block;
@@ -58,11 +60,11 @@
     <div id="grid">
       <ul>
         <br><li><a href="1.html">단기임대</a></li>
-        <li><a href="2.html" style="color:red;">보라곰팡이</a></li>
+        <li><a href="2.html" style="color:black;">보라곰팡이</a></li>
         <li><a href="3.html">비장소</a></li>
       </ul>
      <div id="article">
-      <h2 style="color:red;">보라곰팡이</h2>
+      <h2 style="color:black;">보라곰팡이</h2>
       <h3>비장소에서 움직이는 사람들은 사라지고, 혹은 떠돌아다니는 부유물 정도로 남는다.
       <br>그렇기에 그 공간에는 각각의 개인만이 남아 시각적, 청각적과 같은 기호들로만 상호작용이 이루어진다.</h3>
       <br><br><br><p><img src="보라곰팡이.png" class="mainimg"></p>
