--- a/3.html
+++ b/3.html
@@ -5,58 +5,10 @@
   <head>
     <title>K I J I - 비장소</title>
     <meta charset="utf-8">
-    <style>
-      h3 {
-        color: skyblue;
-      }
-      a {
-        color: skyblue;
-        text-decoration: none;
-      }
-      h1 {
-        font-size: 70px;
-        text-align:center;
-        border-bottom: 4px solid darkgrey;
-        padding: 30px;
-        margin: 0px;
-      }
-      #grid ul {
-        font-weight: bold;
-        border-right: 4px solid darkgrey;
-        width: 100px;
-        margin-top: 0px;
-        padding-left: 30px
-      }
-      #grid {
-        display: grid;
-        grid-template-columns: 200px 1fr;
-      }
-      #article {
-        padding-top: 12px;
-        padding-right: 40px;
-        padding-left: 40px;
-      }
-      .mainimg{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 700px;
-      }
-      @media(max-width: 960px){
-        #grid {
-          display: block;
-        }
-        #grid ul {
-          border-right: none
-        }
-        .mainimg{
-          width: 400px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <H1><a href="index.html">K I J I</a></h1>
+    <H1><a href="index.html">K I M J A E</a></h1>
     <div id="grid">
         <ul>
           <br><li><a href="1.html">단기임대</a></li>
