--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
     </style>
   </head>
   <body>
-    <H1><a href="index.html">K I J I</a></h1>
-
+    <H1><a href="index.html">K I M J A E</a></h1>
+    <input type="button" value="K I J I" onclick="
+     document.querySelector('body').style.backgroundColor='green';
+     document.querySelector('body').style.color='white';
+    ">
+    <input type="button" value="K I M J A E" onclick="
+     document.querySelector('body').style.backgroundColor='white';
+     document.querySelector('body').style.color='green';
+    ">
     <ul>
       <br><li><a href="1.html"><strong>단기임대</strong></a></li>
       <li><a href="2.html"><strong>보라곰팡이</strong></a></li>
