--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <meta charset="utf-8">
     <style>
 
+    [title~=INDEXIMG] {
+      border: 1px none RED;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .BLUELIGHT {
+      margin-left: 600px;
+      margin-top: -200px;
+    }
+    .dotborder {
+      border: 30px dotted green;
+      padding: 30px;
+      background: none;
+      margin-left: 200px;
+      margin-right: 200px;
+      height: 500px;
+      margin-top: -100px;
+    }
+
     body {
       background-image: url("MVI_7621.gif");
       background-size: 400px;
@@ -24,12 +45,7 @@
         text-align:center;
         font-family: arial;
       }
-      .mainimg{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 1000px;
-      }
+
       .fonttest {
         background-color: green;
       }
@@ -97,7 +113,13 @@
       <li><a href="3.html"><font color="orange"><strong>비장소</strong></font></a></li>
     </ul>
 -->
-      <p><img src="HOME.png" class="mainimg"></p>
+
+        <p>
+          <img src="HOME.png" class="CIRCLE "title="INDEXIMG" width="800px" height="560px">
+          <img src="R0010971.JPG" class="BLUELIGHT" title="INDEXIMG" width="400px" height="400px">
+          <div class="dotborder" title="INDEXIMG"></div>
+        </p>
+
 <p><div id="disqus_thread"></div>
 <script>
 
