--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="utf-8">
     <style>
 
+
+
       [title~=INDEXIMG] {
         border: 1px none red;
         display: block;
@@ -114,14 +116,14 @@
    <div>
     <h1><a href="index.html">K I J I</a></h1>
   </div>
-    <input type="button" value="K I J I" onclick="
-     document.querySelector('body').style.backgroundColor='green';
-     document.querySelector('body').style.color='black';
-    ">
-    <input type="button" value="K I M J A E" onclick="
-     document.querySelector('body').style.backgroundColor='black';
-     document.querySelector('body').style.color='green';
-    ">
+
+    <button type="button" onclick="document.querySelector('body').style.backgroundColor='green';
+    document.querySelector('body').style.color='black';" id="button1">K I J I</button>
+
+    <button type="button" onclick="document.querySelector('body').style.backgroundColor='black';
+    document.querySelector('body').style.color='green';" id="button1">K I M J A E</button>
+
+    <a href="contact.html" id="button1"><button>CONTACT</button></a>
 
     <br><br><br><P><table>
       <tr>
@@ -141,8 +143,8 @@
     </table></P>
     <ul>
       <br><li><a href="1.html" id="childlist"><strong>단기임대</strong></a></li>
-      <li><a href id="childlist"="2.html"><strong>보라곰팡이</strong></a></li>
-      <li><a href id="childlist"="3.html"><strong>비장소</strong></a></li>
+      <li><a href="2.html" id="childlist"="2.html"><strong>보라곰팡이</strong></a></li>
+      <li><a href="3.html" id="childlist"="3.html"><strong>비장소</strong></a></li>
     </ul>
 
 <!--
