--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <html>
   <head>
     <title>K I J I - HOME</title>
+        <link rel="icon" type="image/ico" href="logokiji.png" />
+         <!-- you can also say this:
+          <link rel="icon" type="image/png" href="location/image.png" /> -->
     <meta charset="utf-8">
     <style>
-
 
 
       [title~=INDEXIMG] {
@@ -43,7 +45,8 @@
         margin-left: auto;
         margin-right: auto;
         text-align: center;
-        text-shadow: -5px 0 black, 0 5px black, 5px 0 black, 0 -5px black;
+        text-shadow: -9px 0 black, 0 9px black, 9px 0 black, 0 -9px black;
+        text-shadow: -15px 0 black, 0 15px black, 15px 0 black, 0 -15px black;
         font-size: 20px;
       }
 
