--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
          <!-- you can also say this:
           <link rel="icon" type="image/png" href="location/image.png" /> -->
     <meta charset="utf-8">
+    <script language="javascript" type="text/javascript" src="js/p5.js"></script>
+    <!-- uncomment lines below to include extra p5 libraries -->
+    <script language="javascript" src="js/addons/p5.dom.js"></script>
+    <!--<script language="javascript" src="js/addons/p5.sound.js"></script>-->
+    <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
     <style>
 
 
