--- a/1.html
+++ b/1.html
@@ -5,6 +5,11 @@
   <head>
     <title>K I J I - 단기임대</title>
     <meta charset="utf-8">
+    <script language="javascript" type="text/javascript" src="js/p5.js"></script>
+    <!-- uncomment lines below to include extra p5 libraries -->
+    <script language="javascript" src="js/addons/p5.dom.js"></script>
+    <!--<script language="javascript" src="js/addons/p5.sound.js"></script>-->
+    <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -16,6 +21,8 @@
         <li><a href="3.html">비장소</a></li>
       </ul>
       <div id="article">
+        <script src="sketch.js"></script>
+        <div id="myContainer"> </div>
         <h2 style="color:black;">단기임대</h2>
         <h3>이런 사회에서 <strong>'집을 <u>가진다</u>'</strong>라는 것이 어떤 의미이며, 여전히 집은 우리에게 어떤 역할을 담당하고 있는지에 대한 것을 알아보기 위한 작업이다.
         현재 집은 소유함과 소유하지 못함, 두 상태만으로 작동된다. 그 밖에 공공장소에서 협소하지만 공간은 사유화가 진행되는데, 이는 일시적이며 지속적이지 않다. 이 과정은 한 공간의 사유화가 끝나고 난 뒤 다시 시작되어 반복된다.
