--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 
 <html>
   <head>
+
+    <script src="sketch.js"></script>
+    <div id="myContainer"> </div>
+
     <title>K I J I - HOME</title>
         <link rel="icon" type="image/ico" href="logokiji.png" />
          <!-- you can also say this:
           <link rel="icon" type="image/png" href="location/image.png" /> -->
     <meta charset="utf-8">
-    <script language="javascript" type="text/javascript" src="js/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="p5.js"></script>
     <!-- uncomment lines below to include extra p5 libraries -->
-    <script language="javascript" src="js/addons/p5.dom.js"></script>
+    <script language="javascript" src="addons/p5.dom.js"></script>
     <!--<script language="javascript" src="js/addons/p5.sound.js"></script>-->
-    <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <style>
 
 
@@ -156,9 +160,6 @@
       <li><a href="3.html" id="childlist"="3.html"><strong>비장소</strong></a></li>
     </ul>
 
-
-    <script src="sketch.js"></script>
-    <div id="myContainer"> </div>
 <!--
     <ul>
       <br><li><a href="1.html"><font color="orange"><strong>단기임대</strong></font></a></li>
