--- a/1.html
+++ b/1.html
@@ -3,10 +3,16 @@
 
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Song+Myung:400" rel="stylesheet">
     <title>K I J I - 단기임대</title>
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="style.css">
+    <style>
+      ul, p, h2, h3 {
+        font-family: "Song Myung", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <H1><a href="index.html">K I M J A E</a></h1>
