--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         text-align:center;
         font-family: arial;
         color: white;
-        text-shadow: -5px 0 black, 0 5px black, 5px 0 black, 0 -5px black;
+        text-shadow: -5px 0 rgb(104, 52, 128), 0 5px rgb(104, 52, 128), 5px 0 rgb(104, 52, 128), 0 -5px rgb(104, 52, 128);
       }
       /* 이거 h1 관련한 링크 밑줄 없애기 관련 start*/
       a:link {
@@ -97,9 +97,14 @@
       tr:hover {
         background-color: green;
       }
-      th, td {
-        padding: 40px;
+      th {
+        padding: 20px;
       }
+
+      td {
+        padding: 30px;
+      }
+
       li {
         display: block;
       }
@@ -127,7 +132,7 @@
   <body>
 
    <div>
-    <h1><a href="index.html">K I J I</a></h1>
+    <h1><a href="index.html">K I M J A E</a></h1>
   </div>
 
     <button type="button" onclick="document.querySelector('body').style.backgroundColor='green';
@@ -139,20 +144,22 @@
     <a href="contact.html" id="button1"><button>CONTACT</button></a>
 
 
-    <br><br><br><P><table>
+    <br><br><br><P>
+      <table align = "center">
       <tr>
-        <th>NAME</th>
-        <th>GOOD</th>
-        <th>NEXT</th>
-        <th>MINE</th>
+        <th>Painting</th>
+        <th>Installation</th>
+        <th>3D Artwork</th>
+        <th>Illustration</th>
+        <th>Video</th>
       </tr>
       <tr>
-        <td>A</td>
-        <td>M</td>
-        <td>K</td>
-        <td>I</td>
-        <td>E</td>
-        <td>J</td>
+        <td>2015</td>
+        <td>2016</td>
+        <td>2017</td>
+        <td>2018</td>
+        <td>2019</td>
+        <td>2020</td>
       </tr>
     </table></P>
     <ul>
