--- a/2.html
+++ b/2.html
@@ -1,5 +1,10 @@
 <!doctype html>
 
+//이거 인덱스 파일에 리스트 부분에 넣으면 됨
+//여기 파일에서는 지워도 됨
+//<li><a href="2.html" id="childlist"="2.html"><strong>보 라 곰 팡 이</strong></a></li>
+//<li><a href="3.html" id="childlist"="3.html"><strong>비 장 소</strong></a></li>
+
 
 <html>
   <head>
