--- a/1.html
+++ b/1.html
@@ -3,33 +3,65 @@
 
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Song+Myung:400" rel="stylesheet">
-    <title>K I J I - 단기임대</title>
+    <script src="sketch2.js"></script>
+    <div id="myContainer2"> </div>
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800" rel="stylesheet">
+    <title>🔺</title>
     <meta charset="utf-8">
+    <script language="javascript" type="text/javascript" src="p5.js"></script>
+    <!-- uncomment lines below to include extra p5 libraries -->
+    <script language="javascript" src="addons/p5.dom.js"></script>
+    <!--<script language="javascript" src="js/addons/p5.sound.js"></script>-->
+    <script language="javascript" type="text/javascript" src="sketch2.js"></script>
 
     <link rel="stylesheet" href="style.css">
     <style>
-      ul, p, h2, h3 {
-        font-family: "Song Myung", sans-serif;
+      h1, ul, p, h2, li {
+        font-family: "Nanum Gothic", sans-serif;
+        font-weight: 800;
+        line-height: 1.5;
       }
+
+      h3{
+        font-family: "Nanum Gothic", sans-serif;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 1.5;
+      }
+
+      body {
+        background-color: rgb(0, 255, 0);
+      }
+
+      .azzy {
+        margin-left: 15%;
+        margin-right: 30%;
+        width: 70%;
+        height: width;
+      }
+
+      #grid {
+        color: red;
+      }
+
+      .emoji{
+        text-align: center;
+      }
+
+      li {
+        list-style-position:inherit;
+      }
+
     </style>
   </head>
   <body>
-    <H1><a href="index.html">K I M J A E</a></h1>
-    <div id="grid">
-      <ul>
-        <br><li><a href="1.html" style="color:black;">단기임대</a></li>
-        <li><a href="2.html">보라곰팡이</a></li>
-        <li><a href="3.html">비장소</a></li>
-      </ul>
-      <div id="article">
-        <h2 style="color:black;">단기임대</h2>
-        <h3>이런 사회에서 <strong>'집을 <u>가진다</u>'</strong>라는 것이 어떤 의미이며, 여전히 집은 우리에게 어떤 역할을 담당하고 있는지에 대한 것을 알아보기 위한 작업이다.
-        현재 집은 소유함과 소유하지 못함, 두 상태만으로 작동된다. 그 밖에 공공장소에서 협소하지만 공간은 사유화가 진행되는데, 이는 일시적이며 지속적이지 않다. 이 과정은 한 공간의 사유화가 끝나고 난 뒤 다시 시작되어 반복된다.
-        <p>우리는 공간과 공간의 사이를 부유하고 떠돌아다니는 과정을 반복한다.</p>
-        <p>결국 3단계의 작업들을 통해 <a href="https://www.youtube.com/watch?v=7Pim0nTemEg" target="_blank" title="SHORT LEASE">
-          ‘현실-가상현실-현실-가상현실…’</a>이라는 두 공간을 오고 가는 공간의 이동을 경험할 수 있을 것</p></h3>
-        <img src="KIJIYE (2).jpg" class="mainimg">
+    <H1><a href="index.html" style ="color: black">ROTATE</a></h1>
+        <h2 style="color:black;" class = "emoji">🙄🙄🙄🙄🙄</h2>
+
+        <p>
+          <img src = "azzy.gif" class = "azzy" alt = "turnning" >
+        </p>
+
       </div>
     </div>
   </body>
