--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
     <script src="sketch.js"></script>
     <div id="myContainer"> </div>
 
-    <title>K I J I - HOME</title>
+    <title>🔺</title>
         <link rel="icon" type="image/ico" href="logokiji.png" />
          <!-- you can also say this:
           <link rel="icon" type="image/png" href="location/image.png" /> -->
@@ -18,10 +19,11 @@
     <script language="javascript" src="addons/p5.dom.js"></script>
     <!--<script language="javascript" src="js/addons/p5.sound.js"></script>-->
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
+
     <style>
 
 
-      [title~=INDEXIMG] {
+      [title~=INDEX.IMG] {
         border: 1px none red;
         display: block;
         margin-left: auto;
@@ -33,7 +35,7 @@
         margin-right: auto;
       }
       .dotborder {
-        border: 30px dotted green;
+        border: 30px dotted hotpink;
         padding: 30px;
         background: none;
         margin-left: 200px;
@@ -49,16 +51,16 @@
 
       /* childlist 하위 항목 링크들 */
       #childlist {
-        color: skyblue;
+        color: rgb(0, 0, 255);
         text-decoration:none;
         display: block;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
-        text-shadow: -9px 0 black, 0 9px black, 9px 0 black, 0 -9px black;
-        text-shadow: -15px 0 black, 0 15px black, 15px 0 black, 0 -15px black;
+        text-shadow: -10px 0 rgb(0, 255, 0), 0 10px rgb(0, 255, 0), 10px 0 rgb(0, 255, 0), 0 -10px rgb(0, 255, 0);
         font-size: 20px;
       }
+
 
       h1 {
         font-size: 70px;
@@ -89,7 +91,23 @@
       .fonttest {
         background-color: green;
       }
+
+      table {
+        width : 100%;
+      }
+      @media screen and (min-width: 800px){
+        table{
+          width: 90%;
+        }
+      }
+      @media screen and (min-width: 1000px) {
+        table {
+          width: 80%;}
+        }
+
       table, th, td {
+        font-family: "Noto Sans";
+        font-weight: 700;
         border: 1px solid black;
         text-align: center;
       }
@@ -109,64 +127,155 @@
         display: block;
       }
 
+
+      .button123{
+        text-align: center;
+      }
+      .button{
+        position: absolute;
+        top: 50%;
+      }
+      .button: hover{
+        background-color: blue;
+      }
+
       .rainbow {
-        width: 300px;
-        height: 300px;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%
         background-color: #3264bc;
         position: relative;
+        object-position: center;
         animation-name: example;
-        animation-duration: 4s;
+        animation-duration: 7s;
         animation-iteration-count: infinite;
       }
 
       @keyframes example {
-        0% {background-color: #3264bc; left: 0%; top: 0%;}
-        25% {background-color: #2eaf88; left: 60%; top: 0%;}
-        50% {background-color: #5e01fe; left: 60%; top: 0%;}
-        75% {background-color: #008200; left: 0%; top: 0%;}
-        100% {background-color: #3264bc; left: 0%; top: 0%;}
+        0% {background-color: red; left: 0%; }
+        25% {background-color: purple; left: 50%; }
+        50% {background-color: yellowgreen; left: 100%}
+        75% {background-color: blue; left: 50%;}
+        100% {background-color: white; left: 0%;}
+      }
+
+      h3 {
+        margin-left: 15%;
+        margin-right: 15%;
+        //text-shadow: 13px 0 rgb(255, 0, 0), 0 -13px rgb(255, 0, 0), -13px 0 rgb(255, 0, 0), 0 13px rgb(255, 0, 0);
+      }
+
+      .CIRCLE{
+        margin-left: 10%
       }
 
     </style>
   </head>
   <body>
 
+
    <div>
-    <h1><a href="index.html">K I M J A E</a></h1>
+    <h1><a href="index.html">🔺</a></h1>
   </div>
 
-    <button type="button" onclick="document.querySelector('body').style.backgroundColor='green';
-    document.querySelector('body').style.color='black';" id="button1">K I J I</button>
+    <div class="button123">
+    <button type="button" onclick="document.querySelector('body').style.backgroundColor='white';
+    document.querySelector('body').style.color='red';" id="button1">⚪</button>
 
-    <button type="button" onclick="document.querySelector('body').style.backgroundColor='black';
-    document.querySelector('body').style.color='green';" id="button1">K I M J A E</button>
+    <button type="button" onclick="document.querySelector('body').style.backgroundColor='red';
+    document.querySelector('body').style.color='white';" id="button1">🟢🔵🟣🔴</button>
 
-    <a href="contact.html" id="button1"><button>CONTACT</button></a>
+      <a href="contact.html" id="button1"><button>CONTACT</button></a>
+
+    </div>
+
+    <br><br><br>
+
+      <ul>
+        <br><li><a href="1.html" id="childlist"><strong>
+
+          <h3>집에 고양이 한 마리가 있는데, 이 고양이는 베란다의 햇볕을 좋아한다.
+          따뜻함을 좋아하는데
+          그중에서도 햇볕에 데워진 타일 바닥의 맨들거리는 느낌을 좋아한다.
+          이 고양이는 노트북 속의 한 페이지에 갇혀 반복적으로 움직이고 있다.
+          이 고양이는 그 페이지의 길이가 늘어나는 만큼 수가 기하급수적으로 늘어나는데
+          몇 마리인지 도저히 모르겠다.
+          페이지를 스크롤하는 만큼 고양이의 수는 늘어난다.
+          이 고양이는 하늘을 바라보는 것인지 페이지 속의 별들을 바라보는 것인지 천장을
+          바라보는 것인지
+          정확하게 무엇을 바라보는지 알 수 없지만,
+          위를 보고 아래를 보고 다시 위를 보고 아래를 바라보는 행동을 반복한다.
+          이 고양이는 물에 떨어지는 어떤 먼지 하나를 보게 되는데
+          그 먼지는 자신의 털인지 아니면 같이 살고 있는 다른 고양이의 털인지 아니면
+          같이 살고 있는
+          인간의 털인지 모르겠지만, 그 먼지는 바람에 따라 움직이고 있다.
+          이 고양이의 바라보는 지점을 보건대 위에서 아래로 떨어진다는 것만 알 수 있다.
+          그것은 물 위로 떨어져 표면에 떠 있게 되는데, 물은 먼지의 무게로 인해
+          약간의 흔들림과 함께 다시 잠잠해진다. 순간, 이 먼지는 사라지고 어느새
+          다시 공중에서 떨어지고 있다. 이 고양이도 순간적으로 다시 위를 바라본다.
+          이 과정은 계속 반복된다. 이곳은 집이다. 이 고양이의 집이다.
+          이 집에는 폭이 좁은 거실 베란다가 있다. 좁지만 그래도 이 베란다에는 햇볕이
+          잘 들어온다.
+          밖으로 나갈 수 없는 사람과 고양이들은 거실 베란다로 나와 밖의 해와 햇빛을 바라보고
+          그러면서 다음엔 마스크를 쓰고 지나가는 사람들을 바라본다. 낮은 층에 위치했기
+          때문에 사람이 큰 목소리로 말하면 그 내용이 들린다. 오늘은 주차 문제로 싸우는
+          것 같은 사람을 보았다.
+          이 집에 살고있는 사람은 커피를 마시며 그리고 이 고양이와 그와 같이 살고 있는
+          다른 고양이 즉, 고양이 두 마리는 간식을 받아먹으며 하루 동안 해야 하는
+          잠깐의 광합성 시간을 가지며 따스함을 느낀다.
+          이 고양이는 물이 흔들리는 것을 계속해서 반복한다. 고양이 행동이 반복하는 것을
+          눈치채고 페이지 속의 별 세 개는 각기 다른 속도로 계속해서 계속해서 계속해서 오른쪽 오른쪽 왼쪽으로
+          돌고 있다. 그중 중간에 위치한 별을 마우스로 클릭하게 되면 색이 변하는 것은 알고 있다.
+          아마 고양이는 다른 사람이 그것을 눌러보게 하려고 위를 쳐다보는 것을 반복하고 있는 것일지도 모른다.
+          집에 고양이 한 마리가 있는데, 이 고양이는 베란다의 햇볕을 좋아한다.
+          따뜻함을 좋아하는데
+          그중에서도 햇볕에 데워진 타일 바닥의 맨들거리는 느낌을 좋아한다.
+          이 고양이는 노트북 속의 한 페이지에 갇혀 반복적으로 움직이고 있다.
+          이 고양이는 그 페이지의 길이가 늘어나는 만큼 수가 기하급수적으로 늘어나는데
+          몇 마리인지 도저히 모르겠다.
+          페이지를 스크롤하는 만큼 고양이의 수는 늘어난다.
+          이 고양이는 하늘을 바라보는 것인지 페이지 속의 별들을 바라보는 것인지 천장을
+          바라보는 것인지
+          정확하게 무엇을 바라보는지 알 수 없지만,
+          위를 보고 아래를 보고 다시 위를 보고 아래를 바라보는 행동을 반복한다.
+          이 고양이는 물에 떨어지는 어떤 먼지 하나를 보게 되는데
+          그 먼지는 자신의 털인지 아니면 같이 살고 있는 다른 고양이의 털인지 아니면
+          같이 살고 있는
+          인간의 털인지 모르겠지만, 그 먼지는 바람에 따라 움직이고 있다.
+          이 고양이의 바라보는 지점을 보건대 위에서 아래로 떨어진다는 것만 알 수 있다.
+          그것은 물 위로 떨어져 표면에 떠 있게 되는데, 물은 먼지의 무게로 인해
+          약간의 흔들림과 함께 다시 잠잠해진다. 순간, 이 먼지는 사라지고 어느새
+          다시 공중에서 떨어지고 있다. 이 고양이도 순간적으로 다시 위를 바라본다.
+          이 과정은 계속 반복된다. 이곳은 집이다. 이 고양이의 집이다.
+          이 집에는 폭이 좁은 거실 베란다가 있다. 좁지만 그래도 이 베란다에는 햇볕이
+          잘 들어온다.
+          밖으로 나갈 수 없는 사람과 고양이들은 거실 베란다로 나와 밖의 해와 햇빛을 바라보고
+          그러면서 다음엔 마스크를 쓰고 지나가는 사람들을 바라본다. 낮은 층에 위치했기
+          때문에 사람이 큰 목소리로 말하면 그 내용이 들린다. 오늘은 주차 문제로 싸우는
+          것 같은 사람을 보았다.
+          이 집에 살고있는 사람은 커피를 마시며 그리고 이 고양이와 그와 같이 살고 있는
+          다른 고양이 즉, 고양이 두 마리는 간식을 받아먹으며 하루 동안 해야 하는
+          잠깐의 광합성 시간을 가지며 따스함을 느낀다.
+          이 고양이는 물이 흔들리는 것을 계속해서 반복한다. 고양이 행동이 반복하는 것을
+          눈치채고 페이지 속의 별 세 개는 각기 다른 속도로 계속해서 계속해서 계속해서 오른쪽 오른쪽 왼쪽으로
+          돌고 있다. 그중 중간에 위치한 별을 마우스로 클릭하게 되면 색이 변하는 것은 알고 있다.
+          아마 고양이는 다른 사람이 그것을 눌러보게 하려고 위를 쳐다보는 것을 반복하고 있는 것일지도 모른다.
+        </h3>
+
+        </strong></a></li>
+      </ul>
 
 
-    <br><br><br><P>
-      <table align = "center">
-      <tr>
-        <th>Painting</th>
-        <th>Installation</th>
-        <th>3D Artwork</th>
-        <th>Illustration</th>
-        <th>Video</th>
-      </tr>
-      <tr>
-        <td>2015</td>
-        <td>2016</td>
-        <td>2017</td>
-        <td>2018</td>
-        <td>2019</td>
-        <td>2020</td>
-      </tr>
-    </table></P>
-    <ul>
-      <br><li><a href="1.html" id="childlist"><strong>단기임대</strong></a></li>
-      <li><a href="2.html" id="childlist"="2.html"><strong>보라곰팡이</strong></a></li>
-      <li><a href="3.html" id="childlist"="3.html"><strong>비장소</strong></a></li>
-    </ul>
+
+
+    <br>
+    <P>
+
+    </P>
+
+    <br>
+    <br>
+    <br>
 
 <!--
     <ul>
@@ -177,9 +286,8 @@
 -->
 
         <p>
-          <img src="HOME.png" class="CIRCLE "title="INDEXIMG" width="800px" height="560px">
-          <img src="R0010971.JPG" class="BLUELIGHT" title="INDEXIMG" width="400px" height="400px">
-          <div class="dotborder" title="INDEXIMG"></div>
+          <img src="HOME.png" class="CIRCLE width="800px" height="560px">
+          <div class="dotborder" ></div>
         </p>
 
         <div class="rainbow">
@@ -189,39 +297,7 @@
 
 
 
-<script>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://kiji.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
-
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5d205f5e22d70e36c2a46b1c/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
 
   </body>
 </html>
